--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(lab1)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(lab1 main.cpp Thing.h Chancellery.cpp Chancellery.h Tutorial.cpp Tutorial.h BookShop.cpp BookShop.h Book.cpp Book.h Thing.cpp)
+add_executable(lab1 main.cpp Thing.h Chancellery.cpp Chancellery.h Tutorial.cpp Tutorial.h BookShop.cpp BookShop.h Book.cpp Book.h Thing.cpp menu.cpp)
